--- a/exercicios/ex026/mq001/estilos/impressora.css
+++ b/exercicios/ex026/mq001/estilos/impressora.css
@@ -15,6 +15,11 @@ menu {
     display: none;
 }
 
+article {
+    width: 100%;
+    
+}
+
 article::after {
     content: 'Esse artigo foi impresso através do site www.cursoemvideo.com';
 }
