--- a/exercicios/ex026/mq001/estilos/tela.css
+++ b/exercicios/ex026/mq001/estilos/tela.css
@@ -11,3 +11,37 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
+
+header {
+    background-color: rgb(158, 157, 157);
+}
+
+header > h1 {
+    text-align: center;
+}
+
+menu ul {
+    list-style-type: none;
+    background-color: gray;
+}
+
+menu li {
+    background-color: rgb(69, 69, 69);
+    color: white;
+    display: inline-block;
+    padding: 5px;
+}
+
+article {
+    width: 600px;
+    display: block;
+    margin: auto;
+}
+
+article > h2 {
+    text-indent: 25px;
+}
+
+article p{
+    text-indent: 25px;
+}
